syntax="proto3";

option go_package = "pb/";

message ImageInfo {
  string laptop_id = 1;
  string image_type = 2;
}